--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">TrafficCardReader</string>
+    <string name="app_name">Traffic Card Balance</string>
 </resources>
